tests/expectations/compiler/core/algorithms/pedersen64_hash_to_group.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372117]: Expected an integer of less than 64 bits or a bool but type `address` was found.
    --> compiler-test:27:50
     |
  27 |         let a: group = Pedersen64::hash_to_group(addr_value);
     |                                                  ^^^^^^^^^^
Error [ETYC0372117]: Expected an integer of less than 64 bits or a bool but type `field` was found.
    --> compiler-test:29:50
     |
  29 |         let c: group = Pedersen64::hash_to_group(field_value);
     |                                                  ^^^^^^^^^^^
Error [ETYC0372117]: Expected an integer of less than 64 bits or a bool but type `group` was found.
    --> compiler-test:30:50
     |
  30 |         let d: group = Pedersen64::hash_to_group(group_value);
     |                                                  ^^^^^^^^^^^
Error [ETYC0372117]: Expected an integer of less than 64 bits or a bool but type `scalar` was found.
    --> compiler-test:37:50
     |
  37 |         let m: group = Pedersen64::hash_to_group(scalar_value);
     |                                                  ^^^^^^^^^^^^
Error [ETYC0372117]: Expected an integer of less than 64 bits or a bool but type `Foo` was found.
    --> compiler-test:39:50
     |
  39 |         let n: group = Pedersen64::hash_to_group(Foo { a: 1u16, b: 1u16 });
     |                                                  ^^^^^^^^^^^^^^^^^^^^^^^^
"""]
